style.scss
/* ... */
.list {
  &-post-title {
    margin-bottom: .25rem;
    font-size: 1rem;
    
    a {
      color: #333;
      

      &:hover,
      &:focus {
        text-decoration: none;
      }
    }
  }
  &-post-date {
    margin-bottom: 1rem;
    font-size: .75rem;
    text-transform: uppercase;
  }
}

.projects-list {
  a {
    color: #333;
  }
}

.writing {
  list-style-type: square;
}

.buttons {
    width: 100%;
}

#gallerycontainer {
    width: 600px;
}

#gallery {
    max-height: 500px;
}

.hero-image-wrapper {
    position: relative;
    display: inline-block;
    max-width: 80%;
}

.hero-image {
    max-width: 100%;
    display: block;
    width: 100%;
}

.hero-image-wrapper .tooltip {
    display: none;
    position: absolute;
    top: calc(100% + 8px);
    left: 50%;
    transform: translateX(-50%);
    padding: 6px 10px;
    background-color: #333;
    color: #fff;
    font-size: 12px;
    white-space: nowrap;
    border-radius: 4px;
    pointer-events: none;
    z-index: 10000;
    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
}

.hero-image-wrapper .tooltip em {
    font-style: italic;
}

.hero-image-wrapper:hover .tooltip {
    display: block;
}

.hero-image-wrapper:hover .tooltip::before {
    content: "";
    position: absolute;
    bottom: 100%;
    left: 50%;
    transform: translateX(-50%);
    width: 0;
    height: 0;
    border: 5px solid transparent;
    border-bottom-color: #333;
    pointer-events: none;
}


@media screen and (max-width: 850px) {
 
  /* Override global h1 margin-bottom and line-height for mobile */
  h1 {
    margin-bottom: 0;
    line-height: 1.2;
  }

.hero-image {
    max-width: 100%;
}
  
  #imageText {
    height: 65px;
    width: 600px;
}
  

  .container {
    margin: 0px;
    padding-top: 25px;
  }


  .masthead {
    width: 100%;
    padding-left: 1rem;
    padding-right: 0;
    margin-right: 0;
    margin-left: 0;
  }

  /* Reset all margins for precise spacing control */
  /* Override global h1 margin-bottom - visually compensate for larger font size */
  h1.masthead-title {
    padding-left: 0;
    padding-bottom: 0;
    padding-top: 0;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    margin-bottom: 0.7rem !important;
    line-height: 1.1;
    display: block;
  }

  .masthead-title {
    padding-left: 0;
    padding-bottom: 0;
    padding-top: 0;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    margin-bottom: 0.7rem !important;
    line-height: 1.1;
    display: block;
  }

  .masthead-title strong,
  .masthead-title a {
    padding-left: 0;
    padding-bottom: 0;
    margin: 0;
    line-height: inherit;
    display: inline;
  }

  .masthead-nav {
    float: left;
    display: inline;
    padding-left: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin-left: 0;
    margin-top: 0;
    margin-bottom: 0;
    font-size: 12px;
    width: 100%;
  }

  .masthead-nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  .masthead-nav li {
    margin: 0;
    padding: 0;
    display: inline;
  }

  .masthead-nav li::after { 
    content: " | ";
  }

  .masthead-nav ul li:last-child::after {
    content: "";
  }

  .masthead .masthead-nav {
    margin-bottom: 1rem !important;
    padding-left: 0;
  }

  .masthead .masthead-nav ul {
    margin-left: 0;
    padding-left: 0;
  }

  .content {
    width: 100%;
    padding: 0px;
    padding-left: 1rem;
    padding-top: 0px;
    padding-bottom: 0px;
    border-left: none;
    float: left;
    border-top: none;
    margin-left: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
    position: relative;
  }

  /* Mobile: Horizontal line matches image width */
  .content.list {
    margin-top: 0px;
    padding-top: 0px;
  }

  .content.list .hero-image-wrapper {
    display: inline-block;
    text-align: left;
    position: relative;
    max-width: 100%;
    margin-left: 0;
    padding-left: 0;
    margin-top: 1.2rem;
    padding-top: 0px;
  }

  .content.list .hero-image-wrapper::before {
    content: "";
    display: block;
    position: absolute;
    top: -1.2rem;
    left: 0;
    width: 100%;
    height: 1px;
    background-color: #dedfe0;
  }
  
  .hero-image {
    margin-left: 0;
    display: block;
    width: 100%;
    max-width: 100%;
  }

  /* Hide desktop vertical line on mobile */
  .content.list .hero-image-wrapper::after {
    display: none;
  }

  #gallerycontainer {
    width:100%;
  }
}

  .page-title {
    margin-bottom: 1rem;
    font-size: 1.1rem;
    font-weight: 600;
    color: #333;
    letter-spacing: -.025rem;
  }

.highlight .hll { background-color: #ffffcc }
.highlight .c { color: #999988; font-style: italic } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .k { color: #000000; font-weight: bold } /* Keyword */
.highlight .o { color: #000000; font-weight: bold } /* Operator */
.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.highlight .ge { color: #000000; font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #999999 } /* Generic.Heading */
.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kc { color: #000000; font-weight: bold } /* Keyword.Constant */
.highlight .kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
/* ... */

